# source_modelling

./: .gitignore  .isort.cfg  Cargo.toml  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  deptry.yml  git-extension.yml  numpydoc.yml  publish-PyPI.yml  pytest.yml  rust.yml  types.yml
source_modelling/: __init__.py  ccldpy.py  community_fault_model.py  fsp.py  gc2_distances.py  gsf.py  magnitude_scaling.py  moment.py  parse_utils.py  rupture_propagation.py  slip.py  sources.py  srf.py  srf_reader.c  srf_reader.pyx  stoch.py  test_moment_conversions.py  triangle_dist.py  trim.py
source_modelling/scripts/: plot_mw_contributions.py  plot_rakes.py  plot_rise.py  plot_slip_rise_rake.py  plot_srf.py  plot_srf_cumulative_moment.py  plot_srf_distribution.py  plot_srf_moment.py
source_modelling/srf_parser/: Cargo.toml
source_modelling/srf_parser/src/: lib.rs  pytypes.rs  scanner.rs  srf_parser.rs  srf_writer.rs  types.rs
src/: lib.rs  pytypes.rs  scanner.rs  srf_parser.rs  srf_writer.rs  types.rs
tests/: test_community_fault_model.py  test_fsp.py  test_gsf.py  test_magnitude_scaling.py  test_moment.py  test_plots.py  test_rupture_propagation.py  test_rx_ry.py  test_slip.py  test_sources.py  test_srf.py  test_stoch.py  test_trim.py
tests/data/: alpine_faults.json
tests/fsps/: s1906SANFRAsong.fsp  s1906SANFRAthat.fsp  s1906SANFRAwald.fsp  s1923KANTOJkoba.fsp  s1923KANTOJwald.fsp  s1944TONANKichi.fsp  s1944TONANKkato.fsp  s1944TONANKkiku.fsp  s1944TONANKsata.fsp  s1944TONANKtani.fsp  s1945MIKAWAkiku.fsp  s1946NANKAIbaba.fsp  s1946NANKAIkato.fsp  s1946NANKAIsata.fsp  s1946NANKAItani.fsp  s1948FUKUIJichi.fsp  s1961KITAMItake.fsp  s1968HYUGANyagi.fsp  s1968TOKACHnaga.fsp  s1969GIFUKEtake.fsp  s1971SANFERheat.fsp  s1974IZUHANtake.fsp  s1974PERU74hart.fsp  s1975OITAKEtake.fsp  s1978MIYAGIyama.fsp  s1978TABASIhart.fsp  s1979COYOTEliua.fsp  s1979IMPERIarch.fsp  s1979IMPERIhart.fsp  s1979IMPERIolso.fsp  s1979IMPERIzeng.fsp  s1979PETATLmend.fsp  s1980IZUHANtake.fsp  s1981PLAYAAmend.fsp  s1982NEWBRUhart.fsp  s1983BORAHPmend.fsp  s1983JAPANSfuku.fsp  s1984MORGANbero.fsp  s1984MORGANhart.fsp  s1984NAGANOtake.fsp  (+112 more)
tests/fsps/bad/: bad_header.fsp  no_columns.fsp  s1993HOKKAItani.fsp
tests/srfs/: bad_float.srf  bad_int.srf  bad_plane.srf  no_points.srf  point_source_v2.srf
tests/stoch/: realisation.stoch
wiki/: Plotting-Tools.md  Rupture-Propagation.md  Sources.md
wiki/images/: sources.ipe
