[package]
name = "srf_utils"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
numpy = "0.29"
lexical-core = "1.0.6"
memmap2 = "0.9"
ndarray = "0.17.2"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
