[build-system]
requires = ["setuptools", "setuptools-scm", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "source_modelling"
authors = [
    {name = "QuakeCoRE" },
]
description = "Source modelling library"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]


[project.scripts]
plot-srf-moment = "source_modelling.scripts.plot_srf_moment:app"
plot-srf-cumulative-moment = "source_modelling.scripts.plot_srf_cumulative_moment:app"
plot-srf = "source_modelling.scripts.plot_srf:app"
plot-srf-rakes = "source_modelling.scripts.plot_rakes:app"
plot-srf-rise = "source_modelling.scripts.plot_rise:app"
plot-mw-contributions = "source_modelling.scripts.plot_mw_contributions:app"

[tool.setuptools.package-dir]
source_modelling = "source_modelling"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["source_modelling", "qcore", "workflow", "pygmt_helper"]

[tool.ruff.lint]
exclude = ["ccld.py"]

[tool.coverage.run]
omit = [
    "source_modelling/scripts/plot_mw_contributions.py"
]

