[build-system]
requires = ["setuptools", "setuptools-scm", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "source_modelling"
authors = [{ name = "QuakeCoRE" }]
description = "Source modelling library"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]


[tool.setuptools.package-data]
source_modelling = ['NZ_CFM/*']

[project.scripts]
plot-srf-moment = "source_modelling.scripts.plot_srf_moment:app"
plot-srf-cumulative-moment = "source_modelling.scripts.plot_srf_cumulative_moment:app"
plot-srf = "source_modelling.scripts.plot_srf:app"
plot-srf-rakes = "source_modelling.scripts.plot_rakes:app"
plot-srf-rise = "source_modelling.scripts.plot_rise:app"
plot-mw-contributions = "source_modelling.scripts.plot_mw_contributions:app"

[tool.setuptools.package-dir]
source_modelling = "source_modelling"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


[tool.ruff]
extend-exclude = ["source_modelling/ccldpy.py"]

[tool.ruff.lint]
extend-select = [
  # isort imports
  "I",
  # Use r'\s+' rather than '\s+'
  "W605",
  # All the naming errors, like using camel case for function names.
  "N",
  # Missing docstrings in classes, methods, and functions
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  # Use f-string instead of a format call
  "UP032",
  # Standard library import is deprecated
  "UP035",
  # Missing function argument type-annotation
  "ANN001",
  # Using except without specifying an exception type to catch
  "BLE001"
]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [
    "source_modelling",
    "workflow",
    "pygmt_helper",
    "qcore",
    "empirical",
    "nshmdb",
    "IM_calculation",
    "mera"
]

[tool.ruff.lint.per-file-ignores]
# Ignore no docstring in __init__.py
"__init__.py" = ["D104"]
# Ignore docstring errors in tests folder
"tests/**.py" = ["D"]
# ignore everything in the ccld.py module



[tool.coverage.run]
omit = [
    "source_modelling/scripts/plot_mw_contributions.py",
    "source_modelling/ccldpy.py",
]
